modernise: dotenv, latest 14.x node

--- a/package.json
+++ b/package.json
@@ -8,12 +8,13 @@
         "start": "node server.js"
     },
     "engines": {
-        "node": "14.15.1"
+        "node": "14.20.1"
     },
     "author": "",
     "license": "ISC",
     "dependencies": {
         "aws-sdk": "^2.476.0",
+        "dotenv": "^16.0.3",
         "express": "^4.14.0",
         "multer": "^1.2.0",
         "spiced-pg": "^1.0.4",
