--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "aws-sdk": "^2.476.0",
         "dotenv": "^16.0.3",
         "express": "^4.14.0",
+        "moment": "^2.29.4",
         "multer": "1.4.5-lts.1",
         "spiced-pg": "^1.0.4",
         "uid-safe": "^2.1.4"
